# holbertonschool-AirBnB_clone_v3

./: .gitignore  AUTHORS  README.md  code_review.txt  console.py  pyproject.toml  requirements.txt
api/v1/: app.py
api/v1/views/: __init__.py  amenities.py  cities.py  index.py  places.py  places_amenities.py  places_reviews.py  states.py  users.py
models/: base_model.py  city.py  place.py  state.py  user.py
models/engine/: db_storage.py  file_storage.py
tests/test_models/: test_amenity.py  test_place.py  test_review.py  test_state.py  test_user.py
tests/test_models/test_engine/: test_db_storage.py  test_file_storage.py
web_flask/: 0-hello_route.py  10-hbnb_filters.py  100-hbnb.py  2-c_route.py  3-python_route.py  4-number_route.py  5-number_template.py  6-number_odd_or_even.py  7-states_list.py  8-cities_by_states.py  9-states.py  README.md
web_flask/templates/: 10-hbnb_filters.html  100-hbnb.html  9-states.html
web_static/: 6-index.html
web_static/styles/: 6-filters.css
